--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ use the fonts in other ways in the font hierarchy etc. */
     --orange: #f29966;
     --redorange: #f26b5e;
     --offwhite: #f2f2f2;
-    --darkgrey: #262626;
+    --darkgrey: #1a1a1a;
     --ochre: #f2b872;
     --medium-grey: #8c8a80;
     --sharp-lime: #b0f222;
@@ -87,7 +87,7 @@ body {
 }
 
 .full-width {
-    background: black;
+    background: var(--darkgrey);
     color: var(--offwhite);
     width: 100%;
 }
